[ASTERIXDB-2256] Reformat sources using code format template
Change-Id: I4faa141c1a8c9700d5e9ac50b839acc9d1eede73
Reviewed-on: https://asterix-gerrit.ics.uci.edu/2310
Tested-by: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Integration-Tests: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Contrib: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Reviewed-by: Murtadha Hubail <mhubail@apache.org>